--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,42 @@
 [package]
 name = "braine"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [workspace]
 members = [
 	"braine_vis",
 ]
 
-[dependencies]
+[features]
+default = ["std"]
+# Standard library support (disable for no_std environments)
+std = []
+# Enable parallel execution using rayon (adds ~200KB to binary)
+parallel = ["rayon", "std"]
+# Enable SIMD optimizations using the wide crate
+simd = ["wide"]
+# Enable GPU compute using wgpu (for very large substrates, 10k+ units)
+gpu = ["wgpu", "pollster", "bytemuck/derive", "std"]
+# Enable serde serialization support
+serde = ["dep:serde"]
 
+[dependencies]
+rayon = { version = "1.10", optional = true }
+wide = { version = "0.7", optional = true }
+wgpu = { version = "24.0", optional = true }
+pollster = { version = "0.4", optional = true }
+bytemuck = { version = "1.24", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+hashbrown = "0.15"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bin]]
+name = "braine"
+required-features = ["std"]
+
+[[bench]]
+name = "substrate"
+harness = false
