refactor(viz): migrate from macroquad to Slint UI
- Replace immediate-mode macroquad with declarative Slint UI framework
- Add build.rs for Slint compilation
- Create main.slint with:
  - Custom theme (dark mode)
  - PongCanvas component with scaled game rendering
  - HudPanel with game statistics
  - LearningPanel with all accelerated learning controls
  - BrainPanel with diagnostics display
  - TabWidget for organized navigation
  - Full callback wiring for all controls
- Simplify main.rs to focus on game logic + Slint binding
- Preserve macroquad version as main_macroquad.rs.bak for reference

Benefits:
- Proper widget layering (no more z-order issues)
- Automatic layout management
- Clean separation of UI markup from logic
- Built-in standard widgets (tabs, sliders, checkboxes)

--- a/braine_vis/Cargo.toml
+++ b/braine_vis/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "braine_viz"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+build = "build.rs"
 
 [dependencies]
-macroquad = "0.4"
+slint = "1.14"
 braine = { path = ".." }
+
+[build-dependencies]
+slint-build = "1.14"
