--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 [workspace]
 members = [
 	"braine_vis",
+	"brained",
 ]
 
 [features]
-default = ["std"]
+default = ["std", "serde"]
 # Standard library support (disable for no_std environments)
 std = []
 # Enable parallel execution using rayon (adds ~200KB to binary)
@@ -28,6 +29,7 @@ wgpu = { version = "24.0", optional = true }
 pollster = { version = "0.4", optional = true }
 bytemuck = { version = "1.24", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = "1.0"
 hashbrown = "0.15"
 
 [dev-dependencies]
@@ -36,6 +38,11 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [[bin]]
 name = "braine"
 required-features = ["std"]
+
+[[bin]]
+name = "braine-cli"
+path = "src/bin/braine_cli.rs"
+required-features = ["std", "serde"]
 
 [[bench]]
 name = "substrate"
