--- a/braine_vis/Cargo.toml
+++ b/braine_vis/Cargo.toml
@@ -7,6 +7,8 @@ build = "build.rs"
 [dependencies]
 slint = "1.14"
 braine = { path = ".." }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [build-dependencies]
 slint-build = "1.14"
