--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ bytemuck = { version = "1.24", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = "1.0"
 hashbrown = "0.15"
+lz4_flex = { version = "0.11", default-features = false }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
