--- a/crates/braine_desktop/Cargo.toml
+++ b/crates/braine_desktop/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "braine_viz"
+name = "braine_desktop"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
 [dependencies]
 slint = "1.14"
-braine = { path = ".." }
+braine = { path = "../core" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
