--- a/crates/brained/Cargo.toml
+++ b/crates/brained/Cargo.toml
@@ -16,7 +16,7 @@ name = "brained"
 path = "src/main.rs"
 
 [dependencies]
-braine = { path = "..", features = ["serde"] }
+braine = { path = "../core", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.42", features = ["full"] }
