--- a/crates/brained/Cargo.toml
+++ b/crates/brained/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 
 [dependencies]
 braine = { path = "../core", features = ["serde"] }
+braine_games = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.42", features = ["full"] }
