--- a/crates/braine_web/Cargo.toml
+++ b/crates/braine_web/Cargo.toml
@@ -13,7 +13,9 @@ web = [
 	"dep:wasm-bindgen",
 	"dep:wasm-bindgen-futures",
 	"dep:web-sys",
+	"dep:serde",
 	"dep:braine_games",
+	"dep:serde_json",
 	"braine/std",
 ]
 
@@ -22,10 +24,12 @@ braine = { path = "../core", default-features = false, features = ["serde"] }
 braine_games = { path = "../shared/braine_games", default-features = false, features = ["braine"], optional = true }
 
 leptos = { version = "0.7", optional = true, default-features = false, features = ["csr"] }
-js-sys = { version = "0.3", optional = true }
-wasm-bindgen = { version = "0.2", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
-web-sys = { version = "0.3", optional = true, default-features = false, features = [
+js-sys = { version = "=0.3.76", optional = true }
+wasm-bindgen = { version = "=0.2.99", optional = true }
+wasm-bindgen-futures = { version = "=0.4.49", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = { version = "1.0", optional = true }
+web-sys = { version = "=0.3.76", optional = true, default-features = false, features = [
 	"Window",
 	"Document",
 	"Storage",
@@ -50,6 +54,9 @@ web-sys = { version = "0.3", optional = true, default-features = false, features
 	"Event",
 	"Navigator",
 ] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-time = "1"
 
 [lib]
 path = "src/lib.rs"
