--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -24,7 +24,7 @@ pollster = { version = "0.4", optional = true }
 bytemuck = { version = "1.24", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = "1.0"
-hashbrown = "0.15"
+hashbrown = { version = "0.15", features = ["serde"] }
 lz4_flex = { version = "0.11", default-features = false }
 
 [dev-dependencies]
