feat(web): add Learning tab, fix unit colors, improve SpotXY/Pong, expand About
- Add Learning dashboard tab with learning writes, simulation speed, and reward shaping controls
- Reorder tabs: About first, Learning second
- Fix Unit Plot and BrainViz color priority: sensor (blue) > group (green) > reserved (gray) > other (yellow)
- SpotXY: remove center cross divider, grid +/- now jumps by powers of 2 (BinaryX→2→4→8)
- Pong: update Game Details with determinism/collision rules, fix paddle clamping
- About: add Configuration parameters section (BrainConfig defaults, web lab defaults, game seeds)
- Persist run_interval_ms and trial_period_ms in settings with serde defaults
- Stop run interval when switching games (stop-first semantics)

--- a/crates/braine_web/Cargo.toml
+++ b/crates/braine_web/Cargo.toml
@@ -33,6 +33,8 @@ web-sys = { version = "=0.3.76", optional = true, default-features = false, feat
 	"Window",
 	"Document",
 	"Storage",
+	"Element",
+	"DomRect",
 	"console",
 	"Blob",
 	"Url",
@@ -43,6 +45,8 @@ web-sys = { version = "=0.3.76", optional = true, default-features = false, feat
 	"FileReader",
 	"ProgressEvent",
 	"HtmlCanvasElement",
+	"MouseEvent",
+	"WheelEvent",
 	"CanvasRenderingContext2d",
 	"IdbFactory",
 	"IdbOpenDbRequest",
