Architecture docs, disclaimers, and BrainViz improvements
Architecture & Documentation:
- Update About page to show correct architecture:
  * Web runs Brain in-memory (no daemon connection)
  * Desktop/CLI connect to daemon
  * Add future vision diagram: centralized daemon with edge sync
- Rename brain.bbi → braine.bbi throughout codebase
- Add terminology clarification: Braine=system, Brain=substrate
- Update architecture.md with web standalone mode explanation

Research Disclaimers:
- Add LLM-assisted research disclaimer to:
  * Web UI (About > Overview section)
  * Desktop UI (about.slint)
  * CLI (usage help)
  * README.md
  * architecture.md

BrainViz Improvements:
- Add full 3D rotation (X and Y axes):
  * Horizontal drag → Y-axis rotation
  * Vertical drag → X-axis rotation
  * Reset button clears both rotations
- Update BrainVizRenderOptions with rotation_y and rotation_x fields
- Update CausalVizRenderOptions with rotation_x field
- Both substrate and causal views now support full rotation

Compute/GPU:
- Update WebGPU status message to indicate future plans
- Document parallel learning/inference architecture in comments

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -193,10 +193,10 @@ jobs:
           - Start/Stop: Toggle learning loop
           - Dream/Burst/Sync/Imprint: Learning helpers
           - Save: Persist brain state
-          - Load: Restore from saved brain.bbi
+          - Load: Restore from saved braine.bbi
 
           DATA LOCATION:
-            Brain saves to: %APPDATA%\Braine\brain.bbi
+            Brain saves to: %APPDATA%\Braine\braine.bbi
           EOF
           (cd artifacts/windows && 7z a -tzip ../../dist/braine-windows-x86_64.zip .)
 
