--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,76 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  changes:
+    name: Detect changes since previous tag
+    runs-on: ubuntu-latest
+    outputs:
+      native: ${{ steps.diff.outputs.native }}
+      web: ${{ steps.diff.outputs.web }}
+      any: ${{ steps.diff.outputs.any }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Compute changed paths
+        id: diff
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          # Default to building everything for manual runs.
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "native=true" >> "$GITHUB_OUTPUT"
+            echo "web=true" >> "$GITHUB_OUTPUT"
+            echo "any=true" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          # For tag pushes, diff from the previous tag if possible.
+          CUR_SHA="${{ github.sha }}"
+          PREV_TAG=""
+          if git describe --tags --abbrev=0 "${CUR_SHA}^" >/dev/null 2>&1; then
+            PREV_TAG=$(git describe --tags --abbrev=0 "${CUR_SHA}^")
+          fi
+
+          if [ -z "$PREV_TAG" ]; then
+            # First release tag (or no prior tags reachable): build everything.
+            echo "native=true" >> "$GITHUB_OUTPUT"
+            echo "web=true" >> "$GITHUB_OUTPUT"
+            echo "any=true" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          CHANGED=$(git diff --name-only "$PREV_TAG".."$CUR_SHA" || true)
+          echo "Changed files since $PREV_TAG:" >&2
+          echo "$CHANGED" >&2
+
+          native=false
+          web=false
+
+          if echo "$CHANGED" | grep -Eq '^(Cargo\.toml|Cargo\.lock|crates/(core|brained|shared)/|scripts/|\.github/workflows/)'; then
+            native=true
+          fi
+
+          if echo "$CHANGED" | grep -Eq '^(Cargo\.toml|Cargo\.lock|crates/braine_web/|scripts/|\.github/workflows/)'; then
+            web=true
+          fi
+
+          any=false
+          if [ "$native" = "true" ] || [ "$web" = "true" ]; then
+            any=true
+          fi
+
+          echo "native=$native" >> "$GITHUB_OUTPUT"
+          echo "web=$web" >> "$GITHUB_OUTPUT"
+          echo "any=$any" >> "$GITHUB_OUTPUT"
+
   # Build native Linux binaries
   build-linux:
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.native == 'true'
     steps:
       - uses: actions/checkout@v4
 
@@ -38,13 +105,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-release-
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libxcb1-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev
-
       - name: Build release (Linux)
-        run: cargo build --release
+        run: |
+          cargo build --release -p braine -p brained
 
       - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
@@ -52,53 +115,14 @@ jobs:
           name: linux-binaries
           path: |
             target/release/brained
-            target/release/braine_desktop
             target/release/braine-cli
-          retention-days: 1
-
-  # Build Windows binaries via cross-compilation
-  build-windows:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-pc-windows-gnu
-
-      - name: Cache cargo registry and target
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-windows-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-windows-
-
-      - name: Install cross-compilation toolchain
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y mingw-w64
-
-      - name: Build release (Windows)
-        run: cargo build --release --target x86_64-pc-windows-gnu
-
-      - name: Upload Windows artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-binaries
-          path: |
-            target/x86_64-pc-windows-gnu/release/brained.exe
-            target/x86_64-pc-windows-gnu/release/braine_desktop.exe
-            target/x86_64-pc-windows-gnu/release/braine.exe
           retention-days: 1
 
   # Build WASM web app
   build-web:
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.web == 'true'
     steps:
       - uses: actions/checkout@v4
 
@@ -135,73 +159,40 @@ jobs:
 
   # Create release with all artifacts
   release:
-    needs: [build-linux, build-windows, build-web]
+    needs: [changes, build-linux, build-web]
     runs-on: ubuntu-latest
+    if: needs.changes.outputs.any == 'true'
     steps:
       - uses: actions/checkout@v4
 
       - name: Download Linux artifacts
+        if: needs.changes.outputs.native == 'true'
         uses: actions/download-artifact@v4
         with:
           name: linux-binaries
           path: artifacts/linux
 
-      - name: Download Windows artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-binaries
-          path: artifacts/windows
-
       - name: Download web artifacts
+        if: needs.changes.outputs.web == 'true'
         uses: actions/download-artifact@v4
         with:
           name: web-dist
           path: artifacts/web
 
-      - name: Install 7z
-        run: sudo apt-get install -y p7zip-full
-
       - name: Prepare release assets
         run: |
           mkdir -p dist
 
-          # Linux tarball
-          chmod +x artifacts/linux/*
-          tar czvf dist/braine-linux-x86_64.tar.gz -C artifacts/linux .
+          if [ "${{ needs.changes.outputs.native }}" = "true" ]; then
+            # Linux tarball
+            chmod +x artifacts/linux/*
+            tar czvf dist/braine-linux-x86_64.tar.gz -C artifacts/linux .
+          fi
 
-          # Windows portable zip
-          cp crates/braine_desktop/assets/braine.ico artifacts/windows/ || true
-          cat > artifacts/windows/run_braine.bat <<'EOF'
-          @echo off
-          rem Ensure we run from the folder containing this script.
-          rem This also makes UNC paths (e.g. \\wsl.localhost\...) work by mapping a temp drive.
-          pushd "%~dp0" || (echo Failed to enter script directory & exit /b 1)
-          start "brained" "%~dp0brained.exe"
-          timeout /t 1 >NUL
-          start "braine_desktop" "%~dp0braine_desktop.exe"
-          popd
-          EOF
-          cat > artifacts/windows/README.txt <<'EOF'
-          Braine - Brain-like Learning Substrate
-
-          SETUP:
-          1. Run run_braine.bat (or create a shortcut to it)
-             - Starts brained daemon in background
-             - Launches braine_desktop UI after 1 second
-
-          CONTROLS:
-          - Start/Stop: Toggle learning loop
-          - Dream/Burst/Sync/Imprint: Learning helpers
-          - Save: Persist brain state
-          - Load: Restore from saved braine.bbi
-
-          DATA LOCATION:
-            Brain saves to: %APPDATA%\Braine\braine.bbi
-          EOF
-          (cd artifacts/windows && 7z a -tzip ../../dist/braine-windows-x86_64.zip .)
-
-          # Web dist tarball
-          tar czvf dist/braine-web.tar.gz -C artifacts/web .
+          if [ "${{ needs.changes.outputs.web }}" = "true" ]; then
+            # Web dist tarball
+            tar czvf dist/braine-web.tar.gz -C artifacts/web .
+          fi
 
       - name: Get tag name
         id: tag
@@ -221,6 +212,4 @@ jobs:
           prerelease: ${{ contains(steps.tag.outputs.tag, '-') }}
           generate_release_notes: true
           files: |
-            dist/braine-linux-x86_64.tar.gz
-            dist/braine-windows-x86_64.zip
-            dist/braine-web.tar.gz
+            dist/*
