--- a/crates/braine_desktop/Cargo.toml
+++ b/crates/braine_desktop/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-slint = "1.14"
+slint = { version = "1.14", default-features = false, features = ["std", "compat-1-2", "backend-winit-x11", "renderer-winit-software"] }
 braine = { path = "../core" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
