Deploy braine_web to GitHub Pages via Actions

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # Packaging/build artifacts
 /dist/
 
+# Web build output (Trunk)
+/crates/braine_web/dist/
+
 # Local brain-image artifacts
 *.bbi
 *.bbi.tmp
