--- a/crates/braine_web/Trunk.toml
+++ b/crates/braine_web/Trunk.toml
@@ -3,6 +3,7 @@ target = "index.html"
 dist = "dist"
 # Force clean build to pickup rustflags
 filehash = true
+features = ["web"]
 
 [watch]
 watch = ["src", "index.html", "app.css"]
