--- a/crates/braine_web/Cargo.toml
+++ b/crates/braine_web/Cargo.toml
@@ -12,6 +12,7 @@ web = [
 	"dep:js-sys",
 	"dep:wasm-bindgen",
 	"dep:wasm-bindgen-futures",
+	"dep:pulldown-cmark",
 	"dep:web-sys",
 	"dep:serde",
 	"dep:braine_games",
@@ -34,6 +35,7 @@ wasm-bindgen = { version = "=0.2.99", optional = true }
 wasm-bindgen-futures = { version = "=0.4.49", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
+pulldown-cmark = { version = "0.12", optional = true }
 web-sys = { version = "=0.3.76", optional = true, default-features = false, features = [
 	"Window",
 	"Document",
