--- a/crates/braine_desktop/Cargo.toml
+++ b/crates/braine_desktop/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 slint = { version = "1.14", default-features = false, features = ["std", "compat-1-2", "backend-winit-x11", "renderer-winit-software"] }
 braine = { path = "../core" }
+braine_games = { path = "../shared/braine_games" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
